kubernetes/api-server/api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-server
  name: api-server
spec:
  ports:
    - name: "api-server"
      port: 3000
      targetPort: 3000
  selector:
    app: api-server
