kubernetes/api-server/api-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: api.k8sdev.jambonz.us
      http:
        paths:
        - backend:
            service: 
              name: api-server
              port: 
                number: 3000
          path: /
          pathType: Prefix
